# birch_rings_memory

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
birch/: fact.py  gravity.py  memory_store.py
birch/resonance/: behavioral.py  cluster.py  detector.py  echo.py  embeddings.py  repetition.py  semantic.py
docs/: STRUCTURED_LIVING_MEMORY.md
src/birch/: adaptive_gravity.py  black_hole.py  fact.py  gravity.py  memory_store.py  meta_fact.py  server.py  singularity_compactor.py  storage.py  thresholds.py  vector_index.py
src/birch/galaxy/: __init__.py  __main__.py  collapse.py  engine.py  forecast.py  loader.py  projection.py  render.py  replay.py  report.py
src/birch/memory_store/: __init__.py  _base.py  _embed_proxy.py  _facts.py  _models.py  _query.py  _sessions.py  _singularity.py  _stats.py
src/birch/resonance/: behavioral.py  centroid.py  cluster.py  detector.py  echo.py  embeddings.py  repetition.py  semantic.py
src/birch/storage/: __init__.py  base.py  sqlite.py
tests/: conftest.py  test_absorb_rollback_restores_original_layer.py  test_adaptive_gravity.py  test_atomic_absorb_session_closing_forecast_rollback_raw_sim.py  test_batch_atomicity_and_numeric_api.py  test_behavioral_patterns.py  test_black_hole_metafact.py  test_cache_invalidation_and_errors.py  test_cache_invalidation_id_validation_and_prune.py  test_chaos_multiprocess.py  test_chatgpt_round10.py  test_chatgpt_round12.py  test_chatgpt_round13.py  test_chatgpt_round14.py  test_chatgpt_round2.py  test_chatgpt_round3.py  test_chatgpt_round4.py  test_chatgpt_round5.py  test_chatgpt_round7.py  test_chatgpt_round8.py  test_chatgpt_round9.py  test_closing_flag_finally_and_trajectory_invariant.py  test_cluster_bundle_cosine_env_and_loader_tolerance.py  test_collapse_orchestration.py  test_collapse_rollback_and_embed_retry.py  test_compute_gravity_avg_resonance_and_post_init.py  test_concurrent_weights_and_metrics.py  test_configurable_thresholds.py  test_contrastive_attribution.py  test_deepseek_round1.py  test_dim_safety_and_session_idempotency.py  test_echo.py  test_echo_ttl.py  test_edge_contracts_and_observability.py  test_embed_provider.py  test_embedding_validation_and_caps.py  test_engine_unregister_and_addfact_query_rollback.py  test_ergonomics.py  test_explicit_resonance.py  test_field_length_caps_and_prompt_injection_advisory.py  (+61 more)
tests/fixtures/: echo_sessions.py  sessions.py
