[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "birch-km"
version = "0.2.0"
description = "Kinetic AI memory system inspired by Paul Birch megastructure physics"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = ["mcp[cli]", "numpy>=1.21"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
birch-mcp = "birch.server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["src/birch"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
files = ["src/birch"]
python_version = "3.11"
ignore_missing_imports = true
