[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "birch-km"
version = "0.3.0"
description = "Kinetic AI memory system inspired by Paul Birch megastructure physics"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = ["mcp[cli]", "numpy>=1.21"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "hypothesis"]
galaxy = ["matplotlib"]

[project.scripts]
birch-mcp = "birch.server:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["src/birch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "chaos: multi-process concurrency stress tests; slower and potentially flaky on slow CI. Run before release with `pytest -m chaos`; excluded from the default suite with `-m 'not chaos'`.",
]
# Default selection excludes chaos so a fast `pytest` stays fast. CI
# can override with `pytest -m chaos` in a release job.
addopts = "-m 'not chaos'"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# This module MUST set BIRCH_DB before importing birch.server (the server
# builds its MemoryStore singleton at import time), so the server import
# deliberately follows top-level code. E402 = import-not-at-top,
# I001 = import-block-not-sorted; both are intentional here.
"tests/test_server_contract.py" = ["E402", "I001"]

[tool.mypy]
files = ["src/birch"]
python_version = "3.11"
ignore_missing_imports = true
